# tripify-tp

./: Entrega Lucas de Linhares.txt  Tripify.postman_collection.json  capacitor.config.ts  ionic.config.json  package.json  vercel.json
backend/: Cargo.toml  README.md
backend/sql/: schema.sql
backend/src/: db.rs  main.rs
backend/src/handlers/: location_handlers.rs  mod.rs  trip_handlers.rs  user_handlers.rs
backend/src/middleware/: auth_middleware.rs
backend/src/models/: location.rs  mod.rs  trip.rs  user.rs
backend/src/routes/: location_routes.rs  mod.rs  trip_routes.rs  user_routes.rs
backend/src/utils/: hashing_utils.rs  json_utils.rs  jwt_utils.rs  mod.rs
frontend/: bun.lockb  package.json
frontend/resources/: MOBILE-API.postman_collection.json
frontend/src/: index.html  main.ts
www/: 3rdpartylicenses.txt
www/browser/: chunk-22PRVUNP.js  chunk-2G2L2QNG.js  chunk-2YYG2YK4.js  chunk-35RD6Q7K.js  chunk-3CAZ2TGU.js  chunk-3HOC6SNW.js  chunk-3MJHHCO3.js  chunk-43YV77VX.js  chunk-4FLRBC6A.js  chunk-4JSJPA66.js  chunk-4KR6XQN5.js  chunk-4UAR7225.js  chunk-5CH5KO2C.js  chunk-5YEN3EPI.js  chunk-6ZKIJUUB.js  chunk-7EDT4RDB.js  chunk-7FYSAMER.js  chunk-7NK2LB6T.js  chunk-7QLMNM35.js  chunk-AFCM7AM5.js  chunk-AGM5QK4D.js  chunk-ANCJYXND.js  chunk-AOQDE75R.js  chunk-AOZPXSDA.js  chunk-B5LAWSRG.js  chunk-BBNJAWL3.js  chunk-BG2EPTYS.js  chunk-C6C652W3.js  chunk-CAUQJZZZ.js  chunk-CCCSXFNT.js  chunk-CHTVKOLS.js  chunk-DB6MXGCD.js  chunk-DCGEH7VK.js  chunk-FANUMIDU.js  chunk-FF3P7ZBM.js  chunk-FXM2KW74.js  chunk-GNQLDIHV.js  chunk-HQHMS3EN.js  chunk-HWNICQED.js  (+46 more)
(+47 files in other folders)
